--- a/login_in/css/style.css
+++ b/login_in/css/style.css
@@ -82,7 +82,7 @@ body::before {
     -moz-box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.8);
     box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.8);
     padding: 40px;
-    background: rgba(255,255,255,0.1) url(../images/图56.jpg) no-repeat center center;
+    background: rgba(255,255,255,0.1) url(../images/图56.webp) no-repeat center center;
 	 /*background: rgba(255,255,255,0.1) url(../images/国庆二.jpg) no-repeat center center;*/
    /* background: rgba(255,255,255,0.1) url(../images/中秋二.png)no-repeat center;*/
     background-size: cover;
