--- a/login_in/css/style.css
+++ b/login_in/css/style.css
@@ -26,7 +26,7 @@ nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
 img{max-width:100%;}
 /*end reset*/
 body {
-   background: url(../images/图55.jpg)no-repeat;
+   background: url(../images/图55.webp)no-repeat;
 	 /*background: url(../images/国庆一.jpg)no-repeat;*/
     /*background: url(../images/中秋一.png)no-repeat;*/
     background-size: cover;
