--- a/login_in/css/style.css
+++ b/login_in/css/style.css
@@ -26,9 +26,8 @@ nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
 img{max-width:100%;}
 /*end reset*/
 body {
-   background: url(../images/图55.webp)no-repeat;
-	 /*background: url(../images/国庆一.jpg)no-repeat;*/
-    /*background: url(../images/中秋一.png)no-repeat;*/
+   background: url(https://q4.itc.cn/q_70,c_zoom,h_1200/images01/20260127/83ec74a5906f4be7816c7f13a4a0e5e4.jpeg)no-repeat;
+
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -82,7 +81,7 @@ body::before {
     -moz-box-shadow: 0px 20px 40px rgba(0,0,0,0.15);
     box-shadow: 0px 20px 40px rgba(0,0,0,0.15);
     padding: 40px;
-    background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)), url(../images/图56.webp) no-repeat center center;
+    background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)), url(https://q0.itc.cn/q_70,c_zoom,h_1200/images01/20260127/491558d9beaf42a2b28d2f9ac7f32926.png) no-repeat center center;
     background-size: cover;
     border-radius: 20px;
     backdrop-filter: blur(15px);
