--- a/login_in/pop_up_generator/style.css
+++ b/login_in/pop_up_generator/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Microsoft YaHei', Arial, sans-serif;
-    background: #0b1020 url("image/background.jpg") center / cover no-repeat fixed;
+    background: #0b1020 url("https://q2.itc.cn/q_70/images01/20260201/c59162f13a0f4675bd1f73c01ffedd15.jpeg") center / cover no-repeat fixed;
     display: flex;
     justify-content: center;
     align-items: center;
