--- a/login_in/game/Gomoku/style.css
+++ b/login_in/game/Gomoku/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Microsoft YaHei', Arial, sans-serif;
-    background: url('image/background.jpg') center/cover no-repeat fixed;
+    background: url('https://q9.itc.cn/q_70/images01/20260201/beb318c8e26142df977331676be51917.jpeg') center/cover no-repeat fixed;
     min-height: 100vh;
     display: flex;
     justify-content: center;
